Code/syntax.output
Rules useless in parser due to conflicts

    6 ExtDef: error SEMI


State 9 conflicts: 3 shift/reduce, 1 reduce/reduce
State 17 conflicts: 1 shift/reduce
State 24 conflicts: 4 reduce/reduce
State 35 conflicts: 1 shift/reduce
State 37 conflicts: 1 shift/reduce
State 40 conflicts: 1 shift/reduce
State 54 conflicts: 2 shift/reduce
State 56 conflicts: 1 shift/reduce
State 59 conflicts: 2 shift/reduce
State 73 conflicts: 1 shift/reduce
State 94 conflicts: 1 shift/reduce
State 96 conflicts: 12 reduce/reduce
State 100 conflicts: 10 shift/reduce
State 123 conflicts: 1 shift/reduce
State 172 conflicts: 1 shift/reduce
State 173 conflicts: 1 shift/reduce
State 174 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: error SEMI ExtDefList
    3           | error ExtDefList
    4           | ExtDef ExtDefList
    5           | ε

    6 ExtDef: error SEMI
    7       | Specifier error SEMI
    8       | error Specifier SEMI
    9       | Specifier FunDec error
   10       | Specifier ExtDecList SEMI
   11       | Specifier SEMI
   12       | Specifier FunDec CompSt

   13 ExtDecList: VarDec
   14           | VarDec COMMA ExtDecList
   15           | VarDec error
   16           | VarDec error ExtDecList

   17 Specifier: TYPE
   18          | StructSpecifier

   19 StructSpecifier: STRUCT OptTag LC DefList RC
   20                | STRUCT Tag
   21                | STRUCT OptTag LC error RC

   22 OptTag: ID
   23       | ε

   24 Tag: ID

   25 VarDec: ID
   26       | VarDec LB INT RB
   27       | error
   28       | VarDec LB error RB
   29       | VarDec LB error

   30 FunDec: ID LP VarList RP
   31       | ID LP RP
   32       | error RP
   33       | ID LP error RP
   34       | ID LP error
   35       | error LP VarList RP

   36 VarList: ParamDec COMMA VarList
   37        | ParamDec

   38 ParamDec: Specifier VarDec

   39 CompSt: LC DefList StmtList RC
   40       | error RC
   41       | LC error RC
   42       | LC DefList error RC

   43 StmtList: Stmt StmtList
   44         | ε
   45         | error StmtList

   46 Stmt: Exp SEMI
   47     | CompSt
   48     | RETURN Exp SEMI
   49     | IF LP Exp RP Stmt
   50     | IF LP Exp RP Stmt ELSE Stmt
   51     | WHILE LP Exp RP Stmt
   52     | error SEMI
   53     | Exp error
   54     | RETURN error SEMI
   55     | RETURN Exp error
   56     | IF LP error RP Stmt
   57     | IF LP Exp RP error
   58     | IF LP error RP Stmt ELSE Stmt
   59     | WHILE LP error RP Stmt

   60 DefList: Def DefList
   61        | ε
   62        | error DefList

   63 Def: Specifier DecList SEMI
   64    | Specifier error SEMI

   65 DecList: Dec
   66        | Dec COMMA DecList
   67        | error COMMA DecList
   68        | Dec error DecList
   69        | Dec error

   70 Dec: VarDec
   71    | VarDec ASSIGNOP Exp
   72    | VarDec ASSIGNOP error

   73 Exp: Exp ASSIGNOP Exp
   74    | Exp AND Exp
   75    | Exp OR Exp
   76    | Exp RELOP Exp
   77    | Exp PLUS Exp
   78    | Exp MINUS Exp
   79    | Exp STAR Exp
   80    | Exp DIV Exp
   81    | LP Exp RP
   82    | MINUS Exp
   83    | NOT Exp
   84    | ID LP Args RP
   85    | ID LP RP
   86    | Exp LB Exp RB
   87    | Exp DOT ID
   88    | ID
   89    | INT
   90    | FLOAT
   91    | LP error RP
   92    | ID LP error RP
   93    | Exp LB error RB
   94    | Exp ASSIGNOP error
   95    | Exp AND error
   96    | Exp OR error
   97    | Exp RELOP error
   98    | Exp PLUS error
   99    | Exp MINUS error
  100    | Exp STAR error
  101    | Exp DIV error
  102    | MINUS error
  103    | NOT error

  104 Args: Exp COMMA Args
  105     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error <node> (256) 2 3 6 7 8 9 15 16 21 27 28 29 32 33 34 35 40 41 42 45 52 53 54 55 56 57 58 59 62 64 67 68 69 72 91 92 93 94 95 96 97 98 99 100 101 102 103
    INT <node> (258) 26 89
    FLOAT <node> (259) 90
    ID <node> (260) 22 24 25 30 31 33 34 84 85 87 88 92
    SEMI <node> (261) 2 6 7 8 10 11 46 48 52 54 63 64
    COMMA <node> (262) 14 36 66 67 104
    ASSIGNOP <node> (263) 71 72 73 94
    RELOP <node> (264) 76 97
    PLUS <node> (265) 77 98
    MINUS <node> (266) 78 82 99 102
    STAR <node> (267) 79 100
    DIV <node> (268) 80 101
    AND <node> (269) 74 95
    OR <node> (270) 75 96
    DOT <node> (271) 87
    NOT <node> (272) 83 103
    LP <node> (273) 30 31 33 34 35 49 50 51 56 57 58 59 81 84 85 91 92
    RP <node> (274) 30 31 32 33 35 49 50 51 56 57 58 59 81 84 85 91 92
    LB <node> (275) 26 28 29 86 93
    RB <node> (276) 26 28 86 93
    LC <node> (277) 19 21 39 41 42
    RC <node> (278) 19 21 39 40 41 42
    STRUCT <node> (279) 19 20 21
    RETURN <node> (280) 48 54 55
    IF <node> (281) 49 50 56 57 58
    ELSE <node> (282) 50 58
    WHILE <node> (283) 51 59
    TYPE <node> (284) 17
    LOWER_THAN_ELSE (285)
    UMINUS (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    Program <node> (33)
        on left: 1
        on right: 0
    ExtDefList <node> (34)
        on left: 2 3 4 5
        on right: 1 2 3 4
    ExtDef <node> (35)
        on left: 6 7 8 9 10 11 12
        on right: 4
    ExtDecList <node> (36)
        on left: 13 14 15 16
        on right: 10 14 16
    Specifier <node> (37)
        on left: 17 18
        on right: 7 8 9 10 11 12 38 63 64
    StructSpecifier <node> (38)
        on left: 19 20 21
        on right: 18
    OptTag <node> (39)
        on left: 22 23
        on right: 19 21
    Tag <node> (40)
        on left: 24
        on right: 20
    VarDec <node> (41)
        on left: 25 26 27 28 29
        on right: 13 14 15 16 26 28 29 38 70 71 72
    FunDec <node> (42)
        on left: 30 31 32 33 34 35
        on right: 9 12
    VarList <node> (43)
        on left: 36 37
        on right: 30 35 36
    ParamDec <node> (44)
        on left: 38
        on right: 36 37
    CompSt <node> (45)
        on left: 39 40 41 42
        on right: 12 47
    StmtList <node> (46)
        on left: 43 44 45
        on right: 39 43 45
    Stmt <node> (47)
        on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59
        on right: 43 49 50 51 56 58 59
    DefList <node> (48)
        on left: 60 61 62
        on right: 19 39 42 60 62
    Def <node> (49)
        on left: 63 64
        on right: 60
    DecList <node> (50)
        on left: 65 66 67 68 69
        on right: 63 66 67 68
    Dec <node> (51)
        on left: 70 71 72
        on right: 65 66 68 69
    Exp <node> (52)
        on left: 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103
        on right: 46 48 49 50 51 53 55 57 71 73 74 75 76 77 78 79 80 81 82 83 86 87 93 94 95 96 97 98 99 100 101 104 105
    Args <node> (53)
        on left: 104 105
        on right: 84 104


State 0

    0 $accept: • Program $end

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 5 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    2 ExtDefList: error • SEMI ExtDefList
    3           | error • ExtDefList
    6 ExtDef: error • SEMI
    8       | error • Specifier SEMI

    error   shift, and go to state 1
    SEMI    shift, and go to state 9
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 5 (ExtDefList)

    ExtDefList       go to state 10
    ExtDef           go to state 6
    Specifier        go to state 11
    StructSpecifier  go to state 8


State 2

   19 StructSpecifier: STRUCT • OptTag LC DefList RC
   20                | STRUCT • Tag
   21                | STRUCT • OptTag LC error RC

    ID  shift, and go to state 12

    $default  reduce using rule 23 (OptTag)

    OptTag  go to state 13
    Tag     go to state 14


State 3

   17 Specifier: TYPE •

    $default  reduce using rule 17 (Specifier)


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 15


State 5

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 6

    4 ExtDefList: ExtDef • ExtDefList

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 5 (ExtDefList)

    ExtDefList       go to state 16
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    7 ExtDef: Specifier • error SEMI
    9       | Specifier • FunDec error
   10       | Specifier • ExtDecList SEMI
   11       | Specifier • SEMI
   12       | Specifier • FunDec CompSt

    error  shift, and go to state 17
    ID     shift, and go to state 18
    SEMI   shift, and go to state 19

    ExtDecList  go to state 20
    VarDec      go to state 21
    FunDec      go to state 22


State 8

   18 Specifier: StructSpecifier •

    $default  reduce using rule 18 (Specifier)


State 9

    2 ExtDefList: error SEMI • ExtDefList
    6 ExtDef: error SEMI •

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end    reduce using rule 5 (ExtDefList)
    $end    [reduce using rule 6 (ExtDef)]
    error   [reduce using rule 6 (ExtDef)]
    STRUCT  [reduce using rule 6 (ExtDef)]
    TYPE    [reduce using rule 6 (ExtDef)]

    ExtDefList       go to state 23
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 10

    3 ExtDefList: error ExtDefList •

    $default  reduce using rule 3 (ExtDefList)


State 11

    7 ExtDef: Specifier • error SEMI
    8       | error Specifier • SEMI
    9       | Specifier • FunDec error
   10       | Specifier • ExtDecList SEMI
   11       | Specifier • SEMI
   12       | Specifier • FunDec CompSt

    error  shift, and go to state 17
    ID     shift, and go to state 18
    SEMI   shift, and go to state 24

    ExtDecList  go to state 20
    VarDec      go to state 21
    FunDec      go to state 22


State 12

   22 OptTag: ID •
   24 Tag: ID •

    LC        reduce using rule 22 (OptTag)
    $default  reduce using rule 24 (Tag)


State 13

   19 StructSpecifier: STRUCT OptTag • LC DefList RC
   21                | STRUCT OptTag • LC error RC

    LC  shift, and go to state 25


State 14

   20 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 20 (StructSpecifier)


State 15

    0 $accept: Program $end •

    $default  accept


State 16

    4 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 4 (ExtDefList)


State 17

    7 ExtDef: Specifier error • SEMI
   27 VarDec: error •
   32 FunDec: error • RP
   35       | error • LP VarList RP

    SEMI  shift, and go to state 26
    LP    shift, and go to state 27
    RP    shift, and go to state 28

    SEMI      [reduce using rule 27 (VarDec)]
    $default  reduce using rule 27 (VarDec)


State 18

   25 VarDec: ID •
   30 FunDec: ID • LP VarList RP
   31       | ID • LP RP
   33       | ID • LP error RP
   34       | ID • LP error

    LP  shift, and go to state 29

    $default  reduce using rule 25 (VarDec)


State 19

   11 ExtDef: Specifier SEMI •

    $default  reduce using rule 11 (ExtDef)


State 20

   10 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 30


State 21

   13 ExtDecList: VarDec •
   14           | VarDec • COMMA ExtDecList
   15           | VarDec • error
   16           | VarDec • error ExtDecList
   26 VarDec: VarDec • LB INT RB
   28       | VarDec • LB error RB
   29       | VarDec • LB error

    error  shift, and go to state 31
    COMMA  shift, and go to state 32
    LB     shift, and go to state 33

    SEMI  reduce using rule 13 (ExtDecList)


State 22

    9 ExtDef: Specifier FunDec • error
   12       | Specifier FunDec • CompSt

    error  shift, and go to state 34
    LC     shift, and go to state 35

    CompSt  go to state 36


State 23

    2 ExtDefList: error SEMI ExtDefList •

    $default  reduce using rule 2 (ExtDefList)


State 24

    8 ExtDef: error Specifier SEMI •
   11       | Specifier SEMI •

    $end      reduce using rule 8 (ExtDef)
    $end      [reduce using rule 11 (ExtDef)]
    error     reduce using rule 8 (ExtDef)
    error     [reduce using rule 11 (ExtDef)]
    STRUCT    reduce using rule 8 (ExtDef)
    STRUCT    [reduce using rule 11 (ExtDef)]
    TYPE      reduce using rule 8 (ExtDef)
    TYPE      [reduce using rule 11 (ExtDef)]
    $default  reduce using rule 8 (ExtDef)


State 25

   19 StructSpecifier: STRUCT OptTag LC • DefList RC
   21                | STRUCT OptTag LC • error RC

    error   shift, and go to state 37
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    RC  reduce using rule 61 (DefList)

    Specifier        go to state 38
    StructSpecifier  go to state 8
    DefList          go to state 39
    Def              go to state 40


State 26

    7 ExtDef: Specifier error SEMI •

    $default  reduce using rule 7 (ExtDef)


State 27

   35 FunDec: error LP • VarList RP

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 41
    StructSpecifier  go to state 8
    VarList          go to state 42
    ParamDec         go to state 43


State 28

   32 FunDec: error RP •

    $default  reduce using rule 32 (FunDec)


State 29

   30 FunDec: ID LP • VarList RP
   31       | ID LP • RP
   33       | ID LP • error RP
   34       | ID LP • error

    error   shift, and go to state 44
    RP      shift, and go to state 45
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 41
    StructSpecifier  go to state 8
    VarList          go to state 46
    ParamDec         go to state 43


State 30

   10 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 10 (ExtDef)


State 31

   15 ExtDecList: VarDec error •
   16           | VarDec error • ExtDecList

    error  shift, and go to state 47
    ID     shift, and go to state 48

    SEMI  reduce using rule 15 (ExtDecList)

    ExtDecList  go to state 49
    VarDec      go to state 21


State 32

   14 ExtDecList: VarDec COMMA • ExtDecList

    error  shift, and go to state 47
    ID     shift, and go to state 48

    ExtDecList  go to state 50
    VarDec      go to state 21


State 33

   26 VarDec: VarDec LB • INT RB
   28       | VarDec LB • error RB
   29       | VarDec LB • error

    error  shift, and go to state 51
    INT    shift, and go to state 52


State 34

    9 ExtDef: Specifier FunDec error •
   40 CompSt: error • RC

    RC  shift, and go to state 53

    $default  reduce using rule 9 (ExtDef)


State 35

   39 CompSt: LC • DefList StmtList RC
   41       | LC • error RC
   42       | LC • DefList error RC

    error   shift, and go to state 54
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    error   [reduce using rule 61 (DefList)]
    INT     reduce using rule 61 (DefList)
    FLOAT   reduce using rule 61 (DefList)
    ID      reduce using rule 61 (DefList)
    MINUS   reduce using rule 61 (DefList)
    NOT     reduce using rule 61 (DefList)
    LP      reduce using rule 61 (DefList)
    LC      reduce using rule 61 (DefList)
    RC      reduce using rule 61 (DefList)
    RETURN  reduce using rule 61 (DefList)
    IF      reduce using rule 61 (DefList)
    WHILE   reduce using rule 61 (DefList)

    Specifier        go to state 38
    StructSpecifier  go to state 8
    DefList          go to state 55
    Def              go to state 40


State 36

   12 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 12 (ExtDef)


State 37

   21 StructSpecifier: STRUCT OptTag LC error • RC
   62 DefList: error • DefList

    error   shift, and go to state 56
    RC      shift, and go to state 57
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    RC  [reduce using rule 61 (DefList)]

    Specifier        go to state 38
    StructSpecifier  go to state 8
    DefList          go to state 58
    Def              go to state 40


State 38

   63 Def: Specifier • DecList SEMI
   64    | Specifier • error SEMI

    error  shift, and go to state 59
    ID     shift, and go to state 48

    VarDec   go to state 60
    DecList  go to state 61
    Dec      go to state 62


State 39

   19 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 63


State 40

   60 DefList: Def • DefList

    error   shift, and go to state 56
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    error   [reduce using rule 61 (DefList)]
    INT     reduce using rule 61 (DefList)
    FLOAT   reduce using rule 61 (DefList)
    ID      reduce using rule 61 (DefList)
    MINUS   reduce using rule 61 (DefList)
    NOT     reduce using rule 61 (DefList)
    LP      reduce using rule 61 (DefList)
    LC      reduce using rule 61 (DefList)
    RC      reduce using rule 61 (DefList)
    RETURN  reduce using rule 61 (DefList)
    IF      reduce using rule 61 (DefList)
    WHILE   reduce using rule 61 (DefList)

    Specifier        go to state 38
    StructSpecifier  go to state 8
    DefList          go to state 64
    Def              go to state 40


State 41

   38 ParamDec: Specifier • VarDec

    error  shift, and go to state 47
    ID     shift, and go to state 48

    VarDec  go to state 65


State 42

   35 FunDec: error LP VarList • RP

    RP  shift, and go to state 66


State 43

   36 VarList: ParamDec • COMMA VarList
   37        | ParamDec •

    COMMA  shift, and go to state 67

    $default  reduce using rule 37 (VarList)


State 44

   33 FunDec: ID LP error • RP
   34       | ID LP error •

    RP  shift, and go to state 68

    $default  reduce using rule 34 (FunDec)


State 45

   31 FunDec: ID LP RP •

    $default  reduce using rule 31 (FunDec)


State 46

   30 FunDec: ID LP VarList • RP

    RP  shift, and go to state 69


State 47

   27 VarDec: error •

    $default  reduce using rule 27 (VarDec)


State 48

   25 VarDec: ID •

    $default  reduce using rule 25 (VarDec)


State 49

   16 ExtDecList: VarDec error ExtDecList •

    $default  reduce using rule 16 (ExtDecList)


State 50

   14 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 14 (ExtDecList)


State 51

   28 VarDec: VarDec LB error • RB
   29       | VarDec LB error •

    RB  shift, and go to state 70

    $default  reduce using rule 29 (VarDec)


State 52

   26 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 71


State 53

   40 CompSt: error RC •

    $default  reduce using rule 40 (CompSt)


State 54

   41 CompSt: LC error • RC
   62 DefList: error • DefList

    error   shift, and go to state 56
    RC      shift, and go to state 72
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    error   [reduce using rule 61 (DefList)]
    INT     reduce using rule 61 (DefList)
    FLOAT   reduce using rule 61 (DefList)
    ID      reduce using rule 61 (DefList)
    MINUS   reduce using rule 61 (DefList)
    NOT     reduce using rule 61 (DefList)
    LP      reduce using rule 61 (DefList)
    LC      reduce using rule 61 (DefList)
    RC      [reduce using rule 61 (DefList)]
    RETURN  reduce using rule 61 (DefList)
    IF      reduce using rule 61 (DefList)
    WHILE   reduce using rule 61 (DefList)

    Specifier        go to state 38
    StructSpecifier  go to state 8
    DefList          go to state 58
    Def              go to state 40


State 55

   39 CompSt: LC DefList • StmtList RC
   42       | LC DefList • error RC

    error   shift, and go to state 73
    INT     shift, and go to state 74
    FLOAT   shift, and go to state 75
    ID      shift, and go to state 76
    MINUS   shift, and go to state 77
    NOT     shift, and go to state 78
    LP      shift, and go to state 79
    LC      shift, and go to state 35
    RETURN  shift, and go to state 80
    IF      shift, and go to state 81
    WHILE   shift, and go to state 82

    RC  reduce using rule 44 (StmtList)

    CompSt    go to state 83
    StmtList  go to state 84
    Stmt      go to state 85
    Exp       go to state 86


State 56

   62 DefList: error • DefList

    error   shift, and go to state 56
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    error   [reduce using rule 61 (DefList)]
    INT     reduce using rule 61 (DefList)
    FLOAT   reduce using rule 61 (DefList)
    ID      reduce using rule 61 (DefList)
    MINUS   reduce using rule 61 (DefList)
    NOT     reduce using rule 61 (DefList)
    LP      reduce using rule 61 (DefList)
    LC      reduce using rule 61 (DefList)
    RC      reduce using rule 61 (DefList)
    RETURN  reduce using rule 61 (DefList)
    IF      reduce using rule 61 (DefList)
    WHILE   reduce using rule 61 (DefList)

    Specifier        go to state 38
    StructSpecifier  go to state 8
    DefList          go to state 58
    Def              go to state 40


State 57

   21 StructSpecifier: STRUCT OptTag LC error RC •

    $default  reduce using rule 21 (StructSpecifier)


State 58

   62 DefList: error DefList •

    $default  reduce using rule 62 (DefList)


State 59

   27 VarDec: error •
   64 Def: Specifier error • SEMI
   67 DecList: error • COMMA DecList

    SEMI   shift, and go to state 87
    COMMA  shift, and go to state 88

    SEMI      [reduce using rule 27 (VarDec)]
    COMMA     [reduce using rule 27 (VarDec)]
    $default  reduce using rule 27 (VarDec)


State 60

   26 VarDec: VarDec • LB INT RB
   28       | VarDec • LB error RB
   29       | VarDec • LB error
   70 Dec: VarDec •
   71    | VarDec • ASSIGNOP Exp
   72    | VarDec • ASSIGNOP error

    ASSIGNOP  shift, and go to state 89
    LB        shift, and go to state 33

    $default  reduce using rule 70 (Dec)


State 61

   63 Def: Specifier DecList • SEMI

    SEMI  shift, and go to state 90


State 62

   65 DecList: Dec •
   66        | Dec • COMMA DecList
   68        | Dec • error DecList
   69        | Dec • error

    error  shift, and go to state 91
    COMMA  shift, and go to state 92

    SEMI  reduce using rule 65 (DecList)


State 63

   19 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 19 (StructSpecifier)


State 64

   60 DefList: Def DefList •

    $default  reduce using rule 60 (DefList)


State 65

   26 VarDec: VarDec • LB INT RB
   28       | VarDec • LB error RB
   29       | VarDec • LB error
   38 ParamDec: Specifier VarDec •

    LB  shift, and go to state 33

    $default  reduce using rule 38 (ParamDec)


State 66

   35 FunDec: error LP VarList RP •

    $default  reduce using rule 35 (FunDec)


State 67

   36 VarList: ParamDec COMMA • VarList

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 41
    StructSpecifier  go to state 8
    VarList          go to state 93
    ParamDec         go to state 43


State 68

   33 FunDec: ID LP error RP •

    $default  reduce using rule 33 (FunDec)


State 69
